--- a/analogsticklib/build.gradle
+++ b/analogsticklib/build.gradle
@@ -1,33 +1,27 @@
+apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
+group = 'com.github.developerpaul123'
+
 buildscript {
     repositories {
         mavenCentral()
+        maven {url "https://jitpack.io"}
     }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:0.12.+'
-    }
-}
-
-apply plugin: 'android-sdk-manager'
-apply plugin: 'com.android.library'
-
-repositories {
-    mavenCentral()
 }
 
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion '20.0.0'
+    compileSdkVersion 23
+    buildToolsVersion '22.0.1'
     defaultConfig {
-        applicationId 'com.devpaul.analogsticklib'
         minSdkVersion 11
-        targetSdkVersion 19
+        targetSdkVersion 23
         versionCode Integer.parseInt(project.VERSION_CODE)
         versionName  project.VERSION_NAME
     }
     buildTypes {
         release {
-            runProguard false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -39,4 +33,9 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
 }
 
-apply from: '../maven_push.gradle'
+task javadoc(type: Javadoc) {
+    source = android.sourceSets.main.java.srcDirs
+    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+    destinationDir = file("../javadoc/")
+    failOnError false
+}
