--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,18 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 19
+    compileSdkVersion 23
     buildToolsVersion '20.0.0'
     defaultConfig {
         applicationId 'com.devpaul.analogstick'
         minSdkVersion 14
-        targetSdkVersion 20
+        targetSdkVersion 23
         versionCode 1
         versionName '1.0'
     }
     buildTypes {
         release {
-            runProguard false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
