--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,9 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.12.+'
+        classpath 'com.android.tools.build:gradle:2.1.2'
         classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.12.+'
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
     }
 }
 
@@ -20,7 +19,7 @@ allprojects {
     version = VERSION_NAME
     group = GROUP
     repositories {
-        mavenCentral()
+        maven {url "https://jitpack.io"}
     }
 }
 
